--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
               <div class="book-preview center">
                 <img src="images/12th-pre.jpeg" alt="" />
               </div>
-              <h3 class="title">Important questions English</h3>
+              <a href="subject/?s=english&c=12"
+                ><h3 class="title">Important questions English</h3></a
+              >
               <small>12th</small>
               <div class="badge"><p>Questions&Answers</p></div>
             </div>
