--- a/subject/index.html
+++ b/subject/index.html
@@ -29,11 +29,11 @@
               style="font-size: 20px; padding: 10px"
               class="fa-solid fa-arrow-left"
             ></i
-            ><span>../english</span>
+            >../<span id="sub">english</span>
           </a>
         </div>
         <div class="line"></div>
-        <div class="sub-heading"><h1>English</h1></div>
+        <div class="sub-heading"><h1 id="heading">English</h1></div>
       </section>
       <section id="main"></section>
     </main>
